# patchwork-beta

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: dc_rack_patch_design_spec_v0.md  testing_approach.md
patchwork/: __init__.py  allocator.py
tests/: __init__.py
tests/acceptance/: __init__.py  test_spec_acceptance.py
tests/integration/: test_allocation_core.py
tests/unit/: test_ids_and_sorting.py
